# popoe

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ISSUES.md  LICENSE  NOTICE  README.md  REPRODUCTION.md  TASK_BLAYER_RANSAC.md  TASK_FEATURE_AWARE_SCORING.md  TASK_NIDS_INTEGRATION.md  pyproject.toml
examples/: bop_eval.py  freezev2_monolith.py  pipeline_selfcheck.py  rule_replay.py  solver_swap_demo.py  union_smoke.py
src/popoe/: __init__.py  adapters.py  cache.py  feature_extractor.py  fusion.py  interfaces.py  pose_estimator.py  recipes.py  registration.py  renderer.py  scoring.py  segmentor.py  segmentor_cnos.py  segmentor_detections.py  visualizer.py
src/popoe/datasets/: __init__.py  bop.py
src/popoe/freeze/: __init__.py  adapters.py  feature_extractor.py  fusion.py  recipes.py
src/popoe/metrics/: __init__.py  ar.py  vsd.py
src/popoe/solvers/: __init__.py  gpu_ransac.py  open3d_ransac.py  teaser.py
tests/: gpu_smoke_segmentor.py  test_bop_eval_cli.py  test_cache.py  test_compat_shims.py  test_detection_backends.py  test_detections_load.py  test_detections_scoring.py  test_fusion.py  test_gpu_ransac.py  test_interfaces.py  test_resume_semantics.py  test_rule_replay.py  test_s_coarse.py  test_segmentor_chain.py  test_select_instances.py  test_solver_selection.py  test_teaser_solver.py  test_union_reference_xval.py
tests/fixtures/: nids_lmo_sample.json
